# hanami-manga

./: .directory  .env.example  .gitignore  LICENSE  README.md  bun.lockb  package-lock.json  package.json  svelte.config.js
backend/: .env.example  Cargo.toml  go.mod  go.sum  main.go
backend/api/: athomeServer.go  changelogs.go  chapter.go  get-anime.go  greet.go  manga.go  proxyImage.go
backend/database/: database.go
backend/src/: api.rs  database.rs  main.rs  models.rs  paths.rs  request.rs  routes.rs
backend/src/api/get/: mangadex.rs  mod.rs  user.rs
backend/src/api/post/: mod.rs
backend/src/api/post/user/: api.rs  mod.rs
backend/turso/: turso.go
backend/utils/: request.go
frontend/: .env.example  bun.lockb  next.config.mjs  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: MangaCardSkeleton.tsx  chapterList.tsx  footer.tsx  header.tsx  loadingOverlay.tsx  mangaCard.tsx  mangaCarousel.tsx  mangaCategory.tsx  mangaPageSkeleton.tsx  pagination.tsx  paginationWrapper.tsx  tags.tsx  titlePage.tsx
src/: app.css
src/app/: layout.tsx  page.tsx
src/components/: backButton.svelte  chapterPagePagination.svelte  chevronLeftIcon.svelte  chevronRightIcon.svelte  favoriteCard.svelte  footer.svelte  footer.tsx  header.svelte  header.tsx  mangaCard.tsx  mangaCards.svelte  mangaCategory.tsx  pagination.svelte  readCard.svelte  tempMangaCard.svelte
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/types/:  manga.ts  chapter.ts
src/utils/: favorites.ts  history.ts  request.ts
(+64 files in other folders)
