[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
mangadex-api-schema-rust = { version = "0.9.0", features = ["serialize"] }
reqwest = { version = "0.12.5", features = ["rustls-tls", "json"] }
serde = { version = "1.0.206", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
warp = "0.3.7"
